feat: simple main page

--- a/Course 4/Project/model.ipynb
+++ b/Course 4/Project/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,15 +35,15 @@
    "source": [
     "try:\n",
     "    # Read the CSV and skip bad lines\n",
-    "    df = pd.read_csv(\"Suicide_Detection.csv\", on_bad_lines='skip')\n",
-    "    print(df.shape)\n",
+    "    raw_df = pd.read_csv(\"Suicide_Detection.csv\", on_bad_lines='skip')\n",
+    "    print(raw_df.shape)\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,29 +174,52 @@
        "[232074 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "raw_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Unnamed: 0     int64\n",
+       "text          object\n",
+       "class         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(\"Unnamed: 0\", axis=1)\n",
+    "df = raw_df.drop(\"Unnamed: 0\", axis=1)\n",
     "labelencoder = LabelEncoder()\n",
     "df['class'] = labelencoder.fit_transform(df['class'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +243,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>text</th>\n",
        "      <th>class</th>\n",
        "    </tr>\n",
@@ -228,31 +250,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
        "      <td>Ex Wife Threatening SuicideRecently I left my ...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3</td>\n",
        "      <td>Am I weird I don't get affected by compliments...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>4</td>\n",
        "      <td>Finally 2020 is almost over... So I can never ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>8</td>\n",
        "      <td>i need helpjust help me im crying so hard</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>9</td>\n",
        "      <td>I’m so lostHello, my name is Adam (16) and I’v...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -260,61 +277,55 @@
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232069</th>\n",
-       "      <td>348103</td>\n",
        "      <td>If you don't like rock then your not going to ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232070</th>\n",
-       "      <td>348106</td>\n",
        "      <td>You how you can tell i have so many friends an...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232071</th>\n",
-       "      <td>348107</td>\n",
        "      <td>pee probably tastes like salty tea😏💦‼️ can som...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232072</th>\n",
-       "      <td>348108</td>\n",
        "      <td>The usual stuff you find hereI'm not posting t...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232073</th>\n",
-       "      <td>348110</td>\n",
        "      <td>I still haven't beaten the first boss in Hollo...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>232074 rows × 3 columns</p>\n",
+       "<p>232074 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Unnamed: 0                                               text  class\n",
-       "0                2  Ex Wife Threatening SuicideRecently I left my ...      1\n",
-       "1                3  Am I weird I don't get affected by compliments...      0\n",
-       "2                4  Finally 2020 is almost over... So I can never ...      0\n",
-       "3                8          i need helpjust help me im crying so hard      1\n",
-       "4                9  I’m so lostHello, my name is Adam (16) and I’v...      1\n",
-       "...            ...                                                ...    ...\n",
-       "232069      348103  If you don't like rock then your not going to ...      0\n",
-       "232070      348106  You how you can tell i have so many friends an...      0\n",
-       "232071      348107  pee probably tastes like salty tea😏💦‼️ can som...      0\n",
-       "232072      348108  The usual stuff you find hereI'm not posting t...      1\n",
-       "232073      348110  I still haven't beaten the first boss in Hollo...      0\n",
+       "                                                     text  class\n",
+       "0       Ex Wife Threatening SuicideRecently I left my ...      1\n",
+       "1       Am I weird I don't get affected by compliments...      0\n",
+       "2       Finally 2020 is almost over... So I can never ...      0\n",
+       "3               i need helpjust help me im crying so hard      1\n",
+       "4       I’m so lostHello, my name is Adam (16) and I’v...      1\n",
+       "...                                                   ...    ...\n",
+       "232069  If you don't like rock then your not going to ...      0\n",
+       "232070  You how you can tell i have so many friends an...      0\n",
+       "232071  pee probably tastes like salty tea😏💦‼️ can som...      0\n",
+       "232072  The usual stuff you find hereI'm not posting t...      1\n",
+       "232073  I still haven't beaten the first boss in Hollo...      0\n",
        "\n",
-       "[232074 rows x 3 columns]"
+       "[232074 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,19 +336,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Unnamed: 0    0\n",
-       "text          0\n",
-       "class         0\n",
+       "text     0\n",
+       "class    0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -357,9 +367,10 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\sunio\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\sunio\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     C:\\Users\\sunio\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     },
     {
@@ -368,7 +379,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,22 +415,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.91      0.93      0.92     23287\n",
-      "           1       0.93      0.91      0.92     23128\n",
-      "\n",
-      "    accuracy                           0.92     46415\n",
-      "   macro avg       0.92      0.92      0.92     46415\n",
-      "weighted avg       0.92      0.92      0.92     46415\n",
-      "\n"
+      "(232074, 500)\n",
+      "  (0, 191)\t0.1723289544843608\n",
+      "  (0, 106)\t0.13133728601677205\n",
+      "  (0, 211)\t0.1442020091426488\n",
+      "  (0, 272)\t0.171000231010518\n",
+      "  (0, 442)\t0.14192076589922167\n",
+      "  (0, 223)\t0.06583967471918455\n",
+      "  (0, 147)\t0.12691107301814453\n",
+      "  (0, 79)\t0.17436482188429597\n",
+      "  (0, 168)\t0.13103699261378524\n",
+      "  (0, 95)\t0.17008028290421243\n",
+      "  (0, 63)\t0.1891512618018274\n",
+      "  (0, 264)\t0.12456825771272513\n",
+      "  (0, 402)\t0.11933916702107412\n",
+      "  (0, 188)\t0.18154877268622754\n",
+      "  (0, 96)\t0.15641094230513394\n",
+      "  (0, 189)\t0.19159704142696796\n",
+      "  (0, 414)\t0.18407770417867103\n",
+      "  (0, 345)\t0.100154255207746\n",
+      "  (0, 193)\t0.19176740173862172\n",
+      "  (0, 469)\t0.11350966379722487\n",
+      "  (0, 167)\t0.08786732904054027\n",
+      "  (0, 321)\t0.09736234213491547\n",
+      "  (0, 263)\t0.13601380804826593\n",
+      "  (0, 240)\t0.08488694853739831\n",
+      "  (0, 75)\t0.13646427390684854\n",
+      "  :\t:\n",
+      "  (232072, 204)\t0.1158741384608553\n",
+      "  (232072, 296)\t0.05730236947848372\n",
+      "  (232072, 109)\t0.03947877671621315\n",
+      "  (232072, 223)\t0.1386100524956253\n",
+      "  (232072, 168)\t0.068966943193954\n",
+      "  (232072, 167)\t0.13873809913520313\n",
+      "  (232072, 321)\t0.05124341596452837\n",
+      "  (232072, 240)\t0.26806445603991785\n",
+      "  (232072, 75)\t0.07182341138030436\n",
+      "  (232072, 464)\t0.17306760131004806\n",
+      "  (232072, 93)\t0.05352831709780909\n",
+      "  (232072, 36)\t0.06307216098591958\n",
+      "  (232072, 178)\t0.06046034329673592\n",
+      "  (232073, 149)\t0.4061848328695782\n",
+      "  (232073, 426)\t0.40835058873554425\n",
+      "  (232073, 165)\t0.36056339255535785\n",
+      "  (232073, 198)\t0.3223302916949508\n",
+      "  (232073, 17)\t0.264825526766099\n",
+      "  (232073, 102)\t0.2609462557178041\n",
+      "  (232073, 154)\t0.2882103768860909\n",
+      "  (232073, 440)\t0.1999907598442208\n",
+      "  (232073, 228)\t0.2051915355215282\n",
+      "  (232073, 223)\t0.1408748843259344\n",
+      "  (232073, 402)\t0.2553459053580118\n",
+      "  (232073, 345)\t0.21429661032377711\n",
+      "<class 'scipy.sparse._csr.csr_matrix'>\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'TfidfVectorizer' object has no attribute 'get_feature_names'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(X)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(X))\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mvectorizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_feature_names\u001b[49m())\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Assuming you have a labeled dataset (0 for non-depressed, 1 for depressed)\u001b[39;00m\n\u001b[0;32m     14\u001b[0m y \u001b[38;5;241m=\u001b[39m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mclass\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TfidfVectorizer' object has no attribute 'get_feature_names'"
      ]
     }
    ],
@@ -428,10 +494,15 @@
     "df['text'] = df['text'].apply(preprocess_text)\n",
     "\n",
     "# Feature Extraction\n",
-    "vectorizer = TfidfVectorizer(max_features=1000)\n",
+    "vectorizer = TfidfVectorizer(max_features=500)\n",
     "X = vectorizer.fit_transform(df['text'])\n",
     "\n",
-    "# Assuming you have a labeled dataset (0 for non-depressed, 1 for depressed)\n",
+    "print(X.shape)\n",
+    "print(X)\n",
+    "print(type(X))\n",
+    "print(vectorizer.get_feature_names())\n",
+    "\n",
+    "# Assuming you have a labeled dataset (0 for non-suicide, 1 for suicide)\n",
     "y = df['class']\n",
     "\n",
     "# Splitting dataset into training and testing sets\n",
@@ -503,22 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1])"
+       "array([0])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(vectorizer.transform([\"I am very depress, i want to die\"]))"
+    "model.predict(vectorizer.transform([\"I am very happy\"]))"
    ]
   }
  ],
